src/objects/ffbf__BankFormatMappingJoin__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__BankFormatMapping__c</fullName>
        <label>Bank Format Mapping</label>
        <referenceTo>ffbf__BankFormatMapping__c</referenceTo>
        <relationshipLabel>Bank Format Mappings Join</relationshipLabel>
        <relationshipName>BankFormatMappingsJoin</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbf__ObjectFromField__c</fullName>
        <label>Object From Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ObjectFrom__c</fullName>
        <label>Object From</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ObjectToField__c</fullName>
        <label>Object To Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ObjectTo__c</fullName>
        <label>Object To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordType__c</fullName>
        <label>Deprecated: Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Bank Format Mapping Join</label>
    <nameField>
        <displayFormat>BFMJ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Format Mappings Join</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>